--- a/accounts/templates/accounts/change_password.html
+++ b/accounts/templates/accounts/change_password.html
@@ -3,7 +3,12 @@
 <div class="container">
 <form method = "post">
     {% csrf_token %}
-    <br><br><br>{{ form.as_p }}
+    {{ form.old_password.label }}
+    {{ form.old_password }}<br>{{ form.errors.old_password }}<br>
+    {{ form.new_password1.label }}
+    {{ form.new_password1 }}<br>{{ form.errors.new_password2 }}<br>
+    Re-enter Password :
+    {{ form.new_password2 }}
   <center> <button type="submit">Change Password</button> </center>
 </form>
 </div>
