--- a/personal/templates/personal/home.html
+++ b/personal/templates/personal/home.html
@@ -1,5 +1,6 @@
 {% extends "personal/header.html" %}
 {% load staticfiles %}
 {% block content %}
+{% include 'personal/includes/user_authentication.html' %}
 {% include 'vebsites/includes/content.html' %}
 {% endblock %}
