--- a/personal/templates/personal/header_accounts.html
+++ b/personal/templates/personal/header_accounts.html
@@ -1,54 +1,66 @@
 <html>
 <head>
-	<title>{{title}}</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	{% load staticfiles %}
-	<link rel="stylesheet" href="{% static 'personal/css/bootstrap.min.css' %}" type = "text/css"/>
-	<link rel="stylesheet" href="{% static 'personal/css/topnav1.css' %}" type = "text/css"/>
-	<link rel="stylesheet" href="{% static 'vebsites/css/content.css' %}" type = "text/css"/>
-	<link rel="stylesheet" href="{% static 'personal/css/style1.css' %}" type = "text/css"/>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>{{title}}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  {% load staticfiles %}
+  <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+  <link rel="stylesheet" href="{% static 'accounts/css/fixed-navbar-accounts.css' %}" type="text/css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <script type="text/javascript" src="{% static 'personal/js/bootstrap.min.js' %}"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-	{% if messages %}
-	<center>
-	   {% for message in messages %}
-		   <script>
-			 alert("{{message}}");
-		 </script>
-	   {% endfor %}
-	</center>
-	{% endif %}
+  {% if messages %}
+  <center>
+     {% for message in messages %}
+       <script>
+       alert("{{message}}");
+     </script>
+     {% endfor %}
+  </center>
+  {% endif %}
 {% if user.is_authenticated %}
-	<font class="header" align="right">
-		<b><h3>Welcome {{user}}!!</h3></b>
-	 	<b><h6>Last Login : {{user.last_login}}  IST</h6></b>
-	</font>
-	<div class="topnav" id="myTopnav">
-	  	<a class="vebsites" href="{% url 'profile' %}"> Vebsites</a>
-			<a class="{{info}}" href="{% url 'info' %}"><i class="fa fa-fw fa-user-circle-o fa-1x"></i> My Account</a>
-			<div class="topnav-right">
-	    	<a class="{{logout}}" href="{% url 'logout' %}">Logout <i class="fa fa-sign-out fa-1x"></i></a>
-				<a href="javascript:void(0);" class="icon" onclick="myFunction()">
-				<i class="fa fa-bars"></i>
-				</a>
-		</div>
-	</div>
+  <nav class="navbar navbar-expand-sm navbar-fixed-top navbar-inverse bg-inverse">
+  <a class="navbar-brand" href="/">Vebsites</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'contact' %}"><i class="fa fa-fw fa-envelope fa-1x"></i> Contact us</a>
+      </li>
+    </ul>
+      <ul class="nav navbar-nav navbar-right">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <i class="fa fa-user" aria-hidden="true"></i>   {{ user.username }}
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="{% url 'info' %}"><i class="fa fa-fw fa-user-circle-o fa-1x"></i> My Account</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="{% url 'logout' %}">Logout <i class="fa fa-sign-out fa-1x"></i></a>
+        </div>
+      </li>
+    </ul>
+  </div>
+</nav>
 {% block content %}
 {% endblock %}
 {% else %}
 <script>
-alert("You are not Logged in ");
+alert("You must Login to view content ");
 window.location="{% url 'login' %}";
 </script>
 {% endif %}
 <script>
 function myFunction() {
-  var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
+  var x = document.getElementById("myfixed-navbar");
+  if (x.className === "fixed-navbar") {
     x.className += " responsive";
   } else {
-    x.className = "topnav";
+    x.className = "fixed-navbar";
   }
 }
 </script>
