--- a/accounts/static/accounts/css/fixed-navbar-accounts.css
+++ b/accounts/static/accounts/css/fixed-navbar-accounts.css
@@ -1,9 +1,9 @@
 body{
-    background-color: #c5eff7;
     padding-top: 10vh;
+    padding-right: 10vw;
   }
 .navbar-inverse .navbar-toggler{
-  
+
 }
 .navbar-inverse .navbar-toggler-icon{
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
