--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -10,7 +10,7 @@
 
 </style>
 <div class="box" id ="RegForm">
-  <form class="" method="post"><br><br>
+  <form class="" method="post">
     <center><h1>Account Registration</h1></center>
     {% csrf_token %}
     {{form.username}}{{form.errors.username}}
