--- a/onlineshopping/templates/onlineshopping/onlineshopping.html
+++ b/onlineshopping/templates/onlineshopping/onlineshopping.html
@@ -1,6 +1,7 @@
 {% extends 'personal/header_accounts.html' %}
 {% block content %}
 {% load staticfiles %}
+<link rel="stylesheet" href="{% static 'vebsites/css/content.css' %}" type="text/css" />
 <link rel="stylesheet" href="{% static 'onlineshopping/css/onlineshopping.css' %}" type = "text/css"/>
 <div class="content">
   <div class="col" onclick="window.location='/vebsites/online-shopping/';">
