--- a/personal/templates/personal/contact.html
+++ b/personal/templates/personal/contact.html
@@ -5,15 +5,15 @@
   <div class="contact">
   		<div class="contact-method">
   			<i class="fa fa-envelope"></i>
-  			<span>vebsites98@gmail.com</span>		
+  			<span><a href="mailto:vebsites98@gmail.com?subject=Feedback">vebsites98@gmail.com</a></span>
   		</div>
   		<div class="contact-method">
   			<i class="fa fa-mobile"></i>
-  			<span>+91 8110046885</span>	
+  			<span>+91 8110046885</span>
   		</div>
   		<div class="contact-method">
   			<i class="fa fa-map-marker"></i>
-  			<span>Chennai,Tamilnadu, India</span>	
+  			<span><a href="https://www.google.com/maps/place/12%C2%B057'08.4%22N+80%C2%B008'50.5%22E/@12.952329,80.1467998,19z/data=!3m1!4b1!4m14!1m7!3m6!1s0x3a5265ea4f7d3361:0x6e61a70b6863d433!2sChennai,+Tamil+Nadu!3b1!8m2!3d13.0826802!4d80.2707184!3m5!1s0x0:0x0!7e2!8m2!3d12.9523292!4d80.147347">Chennai,Tamilnadu, India</a></span>
   		</div>
   </div>
 {% endblock %}
