--- a/accounts/static/accounts/css/fixed-navbar.css
+++ b/accounts/static/accounts/css/fixed-navbar.css
@@ -1,17 +1,19 @@
 body{
     padding-top: 10vh;
   }
-.navbar-brand{
+.navbar > .navbar-brand{
   font-weight: bold;
   font-style: italic;
+  letter-spacing:.3px;
   color: white;
-  letter-spacing:.5px;
+  text-shadow: .3px .3px .3px black;
 }
 .navbar .navbar-right{
   padding-right: 1vw;
 }
 .navbar-inverse .navbar-toggler-icon{
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+  color: #19b5fe;
 }
 @media screen and (orientation:landscape) and (min-width:600px) and (hover:none){
   .navbar{
