--- a/personal/static/personal/css/style1.css
+++ b/personal/static/personal/css/style1.css
@@ -3,7 +3,6 @@
   height: auto;
   position: relative;
   left: 0%;
-  background: inherit;
   text-align: center;
 }
 .box h1{
@@ -31,7 +30,7 @@
   color: black;
   border-color: #2ecc71;
 }
-.box input[type = "submit"],button{
+.box input[type = "submit"],.box button{
   border:0;
   background: none;
   display: block;
@@ -45,14 +44,14 @@
   transition: 0.25s;
   cursor: pointer;
 }
-.box input[type = "submit"]:hover,button:hover{
+.box input[type = "submit"]:hover,.box button:hover{
   background: #2ecc71;
 }
 
 @media screen and (max-width: 600px){
     .box{width: 90%}
     .box h1{
-      font-size: 5vw;
+      font-size: 6vw;
     }
     #LoginForm{
       position: relative;
