--- a/accounts/static/accounts/css/fixed-navbar.css
+++ b/accounts/static/accounts/css/fixed-navbar.css
@@ -1,6 +1,10 @@
 body{
-    padding-top: 10vh;
+    margin-top: 10vh;
   }
+.navbar{
+  height: 1vh;
+  background-color: black;
+}
 .navbar > .navbar-brand{
   font-weight: bold;
   font-style: italic;
@@ -14,6 +18,14 @@ body{
 .navbar-inverse .navbar-toggler-icon{
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
   color: #19b5fe;
+}
+.text-uppercase {
+  font-style: italic;
+  font-size: 20px;
+}
+.page-footer {
+  background: #343A40;
+  color: white;
 }
 @media screen and (orientation:landscape) and (min-width:600px) and (hover:none){
   .navbar{
