--- a/personal/templates/personal/header_accounts.html
+++ b/personal/templates/personal/header_accounts.html
@@ -21,7 +21,7 @@
   </center>
   {% endif %}
 {% if user.is_authenticated %}
-  <nav class="navbar navbar-expand-sm navbar-fixed-top navbar-inverse bg-inverse">
+  <nav class="navbar navbar-expand-sm navbar-fixed-top navbar-inverse bg-dark">
   <a class="navbar-brand" href="/">Vebsites</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -53,13 +53,13 @@
 <footer class="page-footer font-small blue pt-4">
 
   <!-- Footer Links -->
-  <div class="container-fluid text-center text-md-left">
+  <div class="container-fluid text-center text-sm-left">
 
     <!-- Grid row -->
     <div class="row">
 
       <!-- Grid column -->
-      <div class="col-md-6 mt-md-0 mt-3">
+      <div class="col-sm-6 mt-sm-0 mt-3">
 
         <!-- Content -->
         <h5 class="text-uppercase">Vebsites</h5>
@@ -68,10 +68,10 @@
       </div>
       <!-- Grid column -->
 
-      <hr class="clearfix w-100 d-md-none pb-3">
+      <hr class="clearfix w-100 d-sm-none pb-3">
 
       <!-- Grid column -->
-      <div class="col-md-3 mb-md-0 mb-3">
+      <div class="col-sm-3 mb-sm-0 mb-3">
 
         <!-- Links -->
         <h5 class="text-uppercase">Quick Links</h5>
@@ -95,7 +95,7 @@
       <!-- Grid column -->
 
       <!-- Grid column -->
-      <div class="col-md-3 mb-md-0 mb-3">
+      <div class="col-sm-3 mb-sm-0 mb-3">
 
         <!-- Links -->
         <h5 class="text-uppercase">Website of the Day</h5>
