--- a/vebsites/templates/vebsites/includes/content.html
+++ b/vebsites/templates/vebsites/includes/content.html
@@ -26,5 +26,9 @@
     <img class="content-img" src="{% static 'vebsites/img/business.jpg' %}">
     <span class="business">Business</span>
   </div>
+  <div class="col" onclick="window.location='';">
+    <img class="content-img" src="{% static 'vebsites/img/booking.jpg' %}">
+    <span class="booking">Booking</span>
+  </div>
 </div>
 {% endblock %}
