--- a/vebsites/templates/vebsites/includes/content.html
+++ b/vebsites/templates/vebsites/includes/content.html
@@ -6,7 +6,7 @@
     <img class="content-img" src="{% static 'vebsites/img/onlineshopping.jpg' %}">
     <span class="onlineshopping">ONLINE SHOPPING</span>
   </div>
-  <div class="col" onclick="window.location='';">
+  <div class="col" onclick="window.location='{% url 'entertainment:home' %}';">
     <img class="content-img" src="{% static 'vebsites/img/entertainment.jpg' %}">
     <span class="entertainment">ENTERTAINMENT</span>
   </div>
