--- a/personal/static/personal/css/style1.css
+++ b/personal/static/personal/css/style1.css
@@ -71,7 +71,9 @@
   .box h1{
     font-size: 5vw;
   }
-  .box input[type = "text"],.box input[type = "password"],.box input[type = "email"]{ width: 35vw;}
+  .box input[type = "text"],.box input[type = "password"],.box input[type = "email"]{      
+    width: 35vw;
+  }
   .box input[type = "text"]:focus,.box input[type = "password"]:focus,.box input[type = "email"]:focus{
     width: 42vw ;
   }
