--- a/personal/templates/personal/includes/footer.html
+++ b/personal/templates/personal/includes/footer.html
@@ -29,7 +29,7 @@
 
         <ul class="list-unstyled">
           <li>
-            <a href="#!">Electronics</a>
+            <a href="">Electronics</a>
           </li>
           <li>
             <a href="#!">Music</a>
