--- a/entertainment/templates/entertainment/entertainment.html
+++ b/entertainment/templates/entertainment/entertainment.html
@@ -23,5 +23,9 @@
     <img class="content-img" src="{% static 'entertainment/img/television.jpg' %}">
     <span class="television">Television</span>
   </div>
+  <div class="col" onclick="window.location='';">
+    <img class="content-img" src="{% static 'entertainment/img/gambling.jpg' %}">
+    <span class="gambling">Gambling</span>
+  </div>
 </div>
 {% endblock %}
