--- a/sports/templates/sports/sports.html
+++ b/sports/templates/sports/sports.html
@@ -9,10 +9,10 @@
   </div>
   <div class="col" onclick="window.location='';">
     <img class="content-img" src="{% static 'sports/img/basket_ball.jpg' %}">
-    <span class="basket_ball">Basket Ball</span>
+    <span class="basket_ball">BasketBall</span>
   </div>
   <div class="col" onclick="window.location='';">
-    <img class="content-img" src="{% static 'sports/img/cricket.png' %}">
+    <img class="content-img" src="{% static 'sports/img/cricket.jpg' %}">
     <span class="cricket">Cricket</span>
   </div>
   <div class="col" onclick="window.location='';">
@@ -26,6 +26,14 @@
   <div class="col" onclick="window.location='';">
     <img class="content-img" src="{% static 'sports/img/hockey.jpg' %}">
     <span class="hockey">Hockey</span>
+  </div>
+  <div class="col" onclick="window.location='';">
+    <img class="content-img" src="{% static 'sports/img/golf.jpg' %}">
+    <span class="golf">Golf</span>
+  </div>
+  <div class="col" onclick="window.location='';">
+    <img class="content-img" src="{% static 'sports/img/baseball.jpg' %}">
+    <span class="baseball">Baseball</span>
   </div>
 </div>
 {% endblock %}
