--- a/personal/templates/personal/includes/user_authentication.html
+++ b/personal/templates/personal/includes/user_authentication.html
@@ -1,5 +1,5 @@
 {% if user.is_authenticated %}
 <script type="text/javascript">
-	window.location = "{% url 'profile' %}";
+	window.location = "{% url 'vebsites' %}";
 </script>
 {% endif %}
