--- a/onlineshopping/templates/onlineshopping/onlineshopping.html
+++ b/onlineshopping/templates/onlineshopping/onlineshopping.html
@@ -2,9 +2,8 @@
 {% block content %}
 {% load staticfiles %}
 <link rel="stylesheet" href="{% static 'vebsites/css/content.css' %}" type="text/css" />
-<link rel="stylesheet" href="{% static 'onlineshopping/css/onlineshopping.css' %}" type = "text/css"/>
 <div class="content">
-  <div class="col" onclick="window.location='/vebsites/online-shopping/';">
+  <div class="col" onclick="window.location='{% url 'onlineshopping:electronics' %}';">
     <img class="content-img" src="{% static 'onlineshopping/img/electronics.jpg' %}">
     <span class="centered">ELECTRONICS</span>
     </div>
