--- a/onlineshopping/templates/onlineshopping/electronics.html
+++ b/onlineshopping/templates/onlineshopping/electronics.html
@@ -6,15 +6,15 @@
   <div class="col" onclick="window.location='{% url 'onlineshopping:electronics' %}';">
     <img class="content-img" src="{% static 'electronics/img/mobile.jpg' %}">
     <span class="mobiles">Mobiles</span>
-    </div>
+  </div>
   <div class="col" onclick="window.location='{% url 'onlineshopping:electronics' %}';">
     <img class="content-img" src="{% static 'electronics/img/laptop.jpg' %}">
     <span class="laptops">Laptops</span>
-    </div>
+  </div>
   <div class="col" onclick="window.location='{% url 'onlineshopping:electronics' %}';">
     <img class="content-img" src="{% static 'electronics/img/camera.jpg' %}">
     <span class="camera">Camera</span>
-    </div>
+  </div>
   <div class="col" onclick="window.location='{% url 'onlineshopping:electronics' %}';">
     <img class="content-img" src="{% static 'electronics/img/mobile_accessories.jpg' %}">
     <span class="mobile_accessories">Mobile Accessories</span>
@@ -27,5 +27,13 @@
     <img class="content-img" src="{% static 'electronics/img/camera_accessories.jpg' %}">
     <span class="camera_accessories">Camera Accessories</span>
   </div>
+  <div class="col" onclick="window.location='{% url 'onlineshopping:electronics' %}';">
+  <img class="content-img" src="{% static 'electronics/img/game_console.jpg' %}">
+  <span class="game_console">Game Consoles</span>
+  </div>
+  <div class="col" onclick="window.location='{% url 'onlineshopping:electronics' %}';">
+    <img class="content-img" src="{% static 'electronics/img/used.jpg' %}">
+    <span class="used_refurbished">Used & Refurbished</span>
+    </div>
   </div>
 {% endblock %}
