--- a/onlineshopping/templates/onlineshopping/onlineshopping.html
+++ b/onlineshopping/templates/onlineshopping/onlineshopping.html
@@ -6,34 +6,34 @@
   <div class="col" onclick="window.location='{% url 'onlineshopping:electronics' %}';">
     <img class="content-img" src="{% static 'onlineshopping/img/electronics.jpg' %}">
     <span class="centered">ELECTRONICS</span>
-    </div>
-  <div class="col" onclick="window.location='/vebsites/online-shopping/';">
+  </div>
+  <div class="col" onclick="window.location='{% url 'onlineshopping:fashion' %}';">
     <img class="content-img" src="{% static 'onlineshopping/img/fashion.png' %}">
     <span class="centered">FASHION</span>
-    </div>
+  </div>
   <div class="col" onclick="window.location='/vebsites/online-shopping/';">
     <img class="content-img" src="{% static 'onlineshopping/img/homeappliances.jpg' %}">
     <span class="centered">HOME APPLIANCES</span>
-    </div>
+  </div>
   <div class="col" onclick="window.location='/vebsites/online-shopping/';">
     <img class="content-img" src="{% static 'onlineshopping/img/babycare.jpg' %}">
     <span class="centered">BABY CARE</span>
-    </div>
+  </div>
   <div class="col" onclick="window.location='/vebsites/online-shopping/';">
     <img class="content-img" src="{% static 'onlineshopping/img/books.jpg' %}">
     <span class="centered">BOOKS</span>
-    </div>
+  </div>
   <div class="col" onclick="window.location='/vebsites/online-shopping/';">
     <img class="content-img" src="{% static 'onlineshopping/img/jewellery.jpg' %}">
     <span class="centered">JEWELLERY</span>
-    </div>
+  </div>
   <div class="col" onclick="window.location='/vebsites/online-shopping/';">
     <img class="content-img" src="{% static 'onlineshopping/img/gifts.jpg' %}">
     <span class="centered">GIFTS</span>
-    </div>
+  </div>
   <div class="col" onclick="window.location='/vebsites/online-shopping/';">
     <img class="content-img" src="{% static 'onlineshopping/img/foods.jpg' %}">
     <span class="centered">FOODS AND BEVERAGES</span>
-    </div>
+  </div>
 </div>
 {% endblock %}
