--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -8,7 +8,7 @@
 <form class="" method="post">
   {% csrf_token %}
   <h1>Login</h1>
-  <input type="text" name="username" placeholder="Username" value="{{ username }}">
+  <input type="text" name="username" placeholder="Username / Email-ID" value="{{ username }}">
   <input type="password" name="password" placeholder="Password">
   <input type="submit" name="" value="Login">
   <a href="/accounts/forgot_password">forgot password</a>
